# Elang-Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
dep/: dependency_list.txt
src/elang/: CMakeLists.txt  elpch.h  engine.cpp  engine.h
src/elang/assets/: atlas.cpp  atlas.h  camera.cpp  camera.h  cell.cpp  cell.h  clip.h  material.cpp  material.h  shader.cpp  shader.h  textfile.h  texture.cpp  texture.h
src/elang/common/: aabb.cpp  aabb.h  algorithm.h  batch.h  circle.cpp  circle.h  container.h  define.h  enums.h  fileio.cpp  fileio.h  keysym.cpp  keysym.h  line.h  math.h  matrix4x4.h  mousesym.cpp  mousesym.h  poly2d.h  random.h  shapestream.h  signal.h  singleton.h  stream.h  string.h  string_algorithm.h  time.h  transform.cpp  transform.h  transform2d.cpp  transform2d.h  type_traits.h  vec2.h  vec3.h  vec4.h  vecstream.h  vector.h  vertex.h
src/elang/elements/: basic.h  button.cpp  button.h  canvas.cpp  canvas.h  clipanim.cpp  clipanim.h  sprite.cpp  sprite.h  visage.cpp  visage.h  visage.tcc
src/elang/gui/: CMakeLists.txt  color_code.h
src/elang/gui/dialog/: empty_dialog.cpp  empty_dialog.h  empty_dialog_ui.h  new_project.cpp  new_project.h  ui_empty_dialog.h  ui_new_project.h
src/elang/gui/extension/: list.cpp  list.h  main_window.h  tree.cpp  view.cpp  view.h
src/elang/gui/uic/: ui_logo.h  ui_texture_widget.h
src/elang/gui/widget/: logo.cpp  logo.h  logo.ui  logo_ui.h  palette.h  texture_widget.cpp  texture_widget.h  texture_widget_ui.h
src/elang/registry/: asset.h  asset_database.cpp  asset_database.h  asset_loader.cpp  asset_loader.h  asset_sync.cpp  asset_sync.h  project.cpp  project.h  registry.h  stage.cpp  stage.h
src/elang/systems/: painter.cpp  painter.h  ui.cpp  ui.h
src/elang/tools/: bihashmap.h  controls.cpp  controls.h  declarer.h  hashmap.h  hashset.h  listmap.h  serialization.h  xml.h
src/elgui/: CMakeLists.txt  color_code.h
src/elgui/dialog/: empty_dialog.cpp  empty_dialog.h  new_project.cpp  new_project.h  new_project.ui  new_project_ui.h
src/elgui/extension/: main_window.cpp  tree.h
src/elgui/widget/: logo.h  palette.cpp  palette.h  texture_widget.cpp  texture_widget.h  texture_widget.ui
src/elproj/atlas_editor/: CMakeLists.txt  atlas_setup.cpp  atlas_setup.h  auto_gen.cpp  auto_gen.h  auto_gen.ui  auto_gen_ui.h  cells_widget.cpp  cells_widget.h  clips_widget.cpp  clips_widget.h  clips_widget.ui  clips_widget_ui.h  ghost_dialog.cpp  ghost_dialog.h  pivot_widget.cpp  pivot_widget.h  q_elang_atlas_editor.cpp  q_elang_atlas_editor.h  q_elang_atlas_editor.ui  q_elang_atlas_editor_ui.h  q_ghost_dialog.ui  q_ghost_dialog_ui.h  ui_auto_gen.h  ui_clips_widget.h  ui_q_elang_atlas_editor.h  ui_q_ghost_dialog.h  util.h
src/elproj/main_editor/: CMakeLists.txt  q_main.cpp  q_main.h  q_main.ui  q_main_ui.h
src/runs/atlas_editor/: main.cpp
src/runs/entt_lab/: basic.h  main.cpp  reflection.h
src/runs/main_editor/: main.cpp
src/runs/qt_test/: main.cpp
src/runs/refractor/: main.cpp
src/runs/sdl_test/: test.cpp  test.h
src/test/: main.cpp  test.cpp
